<resources>
    <string name="app_name">Adventure_GO</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="prompt_answer">Answer</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <!-- Login -->
    <string name="action_sign_in">Sign in</string>

    <!-- Register -->
    <string name="action_register">Register</string>
    <string name="title_activity_maps">Map</string>

    <string name="hint">Hint</string>
    <string name="answer">Check answer</string>
    <string name="username_id">Username_ID</string>
    <string name="user_score">User_Score</string>
    <string name="global_top_score">Top score</string>
    <string name="close">Close</string>
    <string name="scoreboard">Scoreboard</string>
</resources>
