<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/pop_scoreboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:gravity="center"
            android:text="@string/username_id"/>
        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:gravity="center"
            android:text="@string/user_score"/>

        <TextView
            android:id="@+id/topScores_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/global_top_score"/>

        <TextView
            android:id="@+id/top_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:gravity="center"
            android:text="@string/username_id"/>
        <TextView
            android:id="@+id/top_score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:gravity="center"
            android:text="@string/user_score"/>


        <Button
            android:id="@+id/close_scoreboard_window"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/close"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>